tests/tldk/error/error-tldk-test1_tmp2.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1 EINPROGRESS (Operation now in progress)
0.100 > S 0:0(0) <...>

+0.1 < S. 1:513(512) ack 1 win 19712 
+0.1 > . 1:1(0) ack 1

+0 < S 10:20(10) win 31283 
+0.1 > . 1:1(0) ack 1
